...
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E2I-Cn-vAe">
                                <rect key="frame" x="0.0" y="0.0" width="168.33333333333334" height="142"/>
                                <subviews>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fu2-ak-3RD">
                                        <rect key="frame" x="0.0" y="0.0" width="168.33333333333334" height="142"/>
                                        <accessibility key="accessibilityConfiguration" identifier="game-image-view"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="8"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                    </imageView>
...
                    <constraint firstAttribute="trailing" secondItem="b1x-hZ-fiu" secondAttribute="trailing" constant="16" id="EPP-3j-Xi5"/>
                    <constraint firstAttribute="bottom" secondItem="b1x-hZ-fiu" secondAttribute="bottom" constant="8" id="Jxe-Bp-q3y"/>
                    <constraint firstItem="b1x-hZ-fiu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="dk1-7i-ykx"/>
                </constraints>
            </tableViewCellContentView>
            <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
            <accessibility key="accessibilityConfiguration" identifier="game-item-cell"/>
            <connections>
                <outlet property="buttonRetryImage" destination="QjE-dP-PNE" id="Qc6-6M-8Qz"/>
                <outlet property="imageGame" destination="fu2-ak-3RD" id="qPJ-5n-YC3"/>
                <outlet property="labelRating" destination="SNG-jF-vAB" id="je8-dc-Lsa"/>
                <outlet property="labelReleaseDate" destination="8Jo-TR-pbA" id="PuQ-KK-qov"/>
                <outlet property="labelTitle" destination="yqh-ct-xB0" id="Wu4-WN-DAt"/>
...
