...
        bindViewModelFavorite()
    }
    
    private func favoriteButton(isFavorite: Bool) {
        let image = isFavorite ? UIImage(systemName: "heart.fill") : UIImage(systemName: "heart")
        let barButton = UIBarButtonItem(image: image, style: .done, target: self, action: #selector(addFavorite))
        barButton.accessibilityIdentifier = "game-favorite-button"

        if isFavorite {
            navigationItem.rightBarButtonItem = barButton
        } else {
            navigationItem.rightBarButtonItem = barButton
        }
...
