...
                                </stackView>
                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ut6-Ub-DbP">
                                    <rect key="frame" x="0.0" y="0.0" width="402" height="300"/>
                                    <subviews>
                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="GxY-9t-xAB">
                                            <rect key="frame" x="0.0" y="0.0" width="402" height="300"/>
                                            <accessibility key="accessibilityConfiguration" identifier="game-detail-image"/>
                                        </imageView>
                                        <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wTX-c0-jTy">
                                            <rect key="frame" x="0.0" y="0.0" width="402" height="300"/>
                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <state key="normal" title="Button"/>
                                            <buttonConfiguration key="configuration" style="plain" image="arrow.clockwise" catalog="system"/>
...
